# namegoeshere

./: .gitignore  CMakeLists.txt  README.md  build  generate  make  namegoeshere
cmake/: vala
res/: gresources.xml
res/ui/: browserwindow.ui
src/: browsernotebook.vala  browsertab.vala  browsertabsign.vala  browserwindow.vala  namegoeshere.vala  preferencemanager.vala
